# party-tg-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/partyshare/: bot.py  config.py  keyboards.py  logging.py  scheduler.py  state.py
src/partyshare/db/: models.py  repo.py
src/partyshare/db/migrations/: env.py  script.py.mako
src/partyshare/db/migrations/versions/: 0001_initial.py
src/partyshare/handlers/: __init__.py  basic.py  events.py  expenses.py  inline.py
src/partyshare/services/: __init__.py  authz.py  events.py  settlement.py  split.py
src/partyshare/utils/: __init__.py  parse.py
tests/: test_authz.py  test_invitelink.py  test_myevents.py  test_settlement.py  test_split.py
