[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "partyshare"
version = "0.1.0"
description = "Telegram-бот PartyShare для организации событий и справедливого деления расходов"
requires-python = ">=3.11"
authors = [{ name = "PartyShare Team" }]
dependencies = [
    "aiogram==3.6.0",
    "asyncpg==0.29.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.2",
    "APScheduler==3.10.4",
    "python-dotenv==1.0.1",
    "alembic==1.13.1",
    "sqlalchemy==2.0.30",
    "structlog==24.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.4.8",
    "black==24.4.2",
    "mypy==1.10.0",
    "pytest==8.2.1",
    "pytest-asyncio==0.23.7",
	"types-setuptools==68.2.0.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-select = ["I", "B", "A", "UP", "ASYNC", "DTZ"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.isort]
known-first-party = ["partyshare"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

